--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,4 +11,19 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  overflow-x : hidden
+}
+
+.nav{
+  font-family: "Rubik Glitch", serif;
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(10);
+}
+
+.heading{
+  font-family: "Gruppo", serif;
+}
+
+.roboto{
+  font-family: "Roboto Condensed", serif;
 }
