--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@ body {
 }
 
 .nav{
-  font-family: "Rubik Glitch", serif;
+  font-family: "New Rocker", serif;
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(10);
 }
