--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,3 +27,17 @@ body {
 .roboto{
   font-family: "Roboto Condensed", serif;
 }
+
+@keyframes slide {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.animate-slide {
+  animation: slide 2s infinite;
+}
