--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
 html {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -95,9 +95,26 @@ body {
 .navoptions {
   visibility: hidden;
 }
+
 @media (min-width:640px) {
 .navoptions{
   visibility: visible;
 }
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1f1f1f;
+}
+
+::-webkit-scrollbar-thumb {
+  background: grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
